<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="680dp"
    android:layout_height="360dp"
    android:orientation="vertical"
    android:background="@drawable/shape_dialog_circle_30">

<!--    <TextView-->
<!--        android:id="@+id/tv1"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:textColor="#000000"-->
<!--        android:textSize="20dp"-->
<!--        android:textStyle="bold" />-->

<!--    //当前有一个小bug就是dialog背景不能透明，小角角有白色边框-->
    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="272dp"
        android:textSize="36sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:textColor="#fff"
        android:text="@string/start_model"
         />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="88dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/dialog_cancle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialog_cancle"
            android:textColor="@color/white"
            android:background="@color/dialog_cancle_bg"
            android:textSize="32sp" />

        <TextView
            android:id="@+id/dialog_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/dialg_start"
            android:textColor="@color/white"
            android:background="@color/dialog_start_bg"
            android:textSize="32sp"
            />
    </LinearLayout>
</LinearLayout>
