<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="1920dp"
    android:layout_height="720dp"
    >

    <RelativeLayout
        android:layout_width="680dp"
        android:layout_height="360dp"
        android:layout_centerInParent="true"
       >

        <RelativeLayout
            android:background="@drawable/shape_dialog_circle_30"
            android:id="@+id/dialog_rl"
            android:layout_width="match_parent"
            android:layout_height="272dp">

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="match_parent"
                android:layout_height="272dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/start_model"
                android:textColor="#fff"
                android:textSize="36sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:layout_below="@id/dialog_rl"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/dialog_cancle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_dialog_circle_left_30"
                android:gravity="center"
                android:text="@string/dialog_cancle"
                android:textColor="@color/white"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/dialog_start"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/shape_dialog_circle_right_30"
                android:gravity="center"
                android:text="@string/dialg_start"
                android:textColor="@color/white"
                android:textSize="32sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
